Code quality: fix some issues reported by Sonar.